--- a/Visualization/css/NewHistogram.css
+++ b/Visualization/css/NewHistogram.css
@@ -2,6 +2,12 @@ body {
   font: 10px sans-serif;
 }
 
+svg {
+  padding: 2px;
+  padding-left:7px
+  padding-top:5px
+}
+
 .bar rect {
   fill: steelblue;
   shape-rendering: crispEdges;
