Added Angles; Changed background Color to Black; And Changed Font Style

--- a/Visualization/css/3DModel.css
+++ b/Visualization/css/3DModel.css
@@ -1,6 +1,8 @@
 body {
-    font-family: Monospace;
-    background-color: #ffffff;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    background-color: #000000;
+    color: #ffffff;
     margin: 0px;
     overflow: hidden;
+    font: 10px 'Alegreya Sans SC';
 }
