more changes to css

--- a/Visualization/css/HistogramOne.css
+++ b/Visualization/css/HistogramOne.css
@@ -1,6 +1,10 @@
 #h-angles, #h-printTime, #h-material, #h-surfaceArea {
 	text-align: center;
 }
+span {
+	font: 16px 'Alegreya Sans SC';
+	color: #C0C0C0;
+}
 
 svg text {
   fill:white;
